# UCAgent

./: Dockerfile  pyproject.toml
examples/Adder/unity_test/tests/: Adder_api.py
tests/: test_cmdline_backend.py  test_stage_manager.py  test_unity_label_refine_checker.py  test_unity_refine_test_cases_checker.py
ucagent/: verify_agent.py  verify_pdb.py
ucagent/abackend/: cmdline.py
ucagent/assets/: mcp_qwen.json
ucagent/checkers/: formal.py  unity_test.py  unity_test_random.py
ucagent/lang/zh/config/: default.yaml  formal.yaml
ucagent/lang/zh/doc/Formal_Doc/: bug_report.md
ucagent/lang/zh/doc/Guide_Doc/: dut_fixture.md
ucagent/lang/zh/skills/formal/basic-info/: SKILL.md
ucagent/lang/zh/skills/formal/basic-info/scripts/: update_basic_info.py
ucagent/lang/zh/skills/formal/bug-report/: SKILL.md
ucagent/lang/zh/skills/formal/cex-gen/: SKILL.md
ucagent/lang/zh/skills/formal/env-config/: SKILL.md
ucagent/lang/zh/skills/formal/func-spec/: SKILL.md
ucagent/lang/zh/skills/formal/lib/: SKILL.md  formal_paths.py  formal_tools.py  models.py
ucagent/lang/zh/skills/formal/plan/: SKILL.md
ucagent/lang/zh/skills/formal/summary/: SKILL.md
ucagent/lang/zh/skills/formal/sva-audit/: SKILL.md
ucagent/lang/zh/skills/formal/sva-gen/: SKILL.md
ucagent/lang/zh/skills/formal/sva-opt/: SKILL.md
ucagent/lang/zh/template/formal_test/: .formal_records.yaml
ucagent/lang/zh/template/unity_test/tests/: {{DUT}}_api.py
ucagent/stage/: vmanager.py  vstage.py
ucagent/tools/: uctool.py
ucagent/util/: functions.py
(+10 files in other folders)
